# Team-8

./: .gitignore  AccesibleRoute.cpp  AccesibleRoute.h  Airpot.cpp  Airpot.h  Apartment.cpp  Apartment.h  ApartmentFactory.h  BestRouteNode.cpp  BestRouteNode.h  BudgetAllocationSystem.cpp  BuildingController.cpp  BuildingController.h  Buildings.h  Citizen.cpp  Citizen.h  CitizenController.cpp  CitizenController.h  CitizenInterface.h  CitizenType.cpp  CitizenType.h  City.cpp  City.h  CityController.cpp  CityController.h  CitySector.h  CoalFactory.h  CoalSource.h  Command.cpp  Command.h  CommercialBuilding.h  CommercialFactory.h  CommercialTaxationSystem.cpp  ConstructionCompany.cpp  CulturalCenter.cpp  CulturalCenter.h  CulturalCenterFactory.h  Damaged.cpp  Damaged.h  DemoMain.cpp  (+130 more)
Buildings/: Apartment.h  Buildings.cpp  Buildings.h  Citizen.h  CommercialBuilding.h  ConstructionCompany.cpp  CulturalCenter.cpp  CulturalCenter.h  Estate.h  FinanceDepartment.cpp  LandmarkBuilding.h  MedicalCenter.cpp  Operational.h  PoliceStation.h  ResidentialBuilding.h  State.h
Citizens/: Citizen.cpp  Citizen.h  CitizenInterface.h  CitizenType.cpp  Policy.h  PopulationHistory.h  PopulationMemento.cpp
Government/: BudgetAllocationSystem.cpp  BudgetAllocationSystem.h  CommercialTaxationSystem.cpp  FinanceDepartment.cpp  FinanceDepartment.h  Government.cpp
Modified Diagrams/: TransportImplementation.vpp  utilities.vpp
Report/: Design Wits.docx  README.md
System/: AccesibleRoute.cpp  AccesibleRoute.h  (+166 more)
src/tests/: CMakeLists.txt  TaxationSystemDocTest.cpp  government_unittest.cpp
(+2382 files in other folders)
